# whisper-unified

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  orchestrator.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: labeler.yaml  labels.yaml
.github/workflows/: ci.yml  label-retroactive.yml  label-size.yml  label-sync.yml  labeler.yml  pr-labels.yml  release.yml
PRPs/: INDEX.md
PRPs/templates/: prp_base.md  prp_story_task.md
config/: config.yaml.example
src/whisper_unified/: __init__.py  __main__.py  config.py
src/whisper_unified/api/: app.py  pipeline_routes.py  routes.py
src/whisper_unified/models/: __init__.py  pipeline.py
src/whisper_unified/services/: diarization.py  orchestrator.py  pipeline.py  whisper.py
tests/: conftest.py  test_config.py
tests/api/: test_pipeline_routes.py  test_routes.py
tests/models/: test_pipeline_models.py
tests/services/: test_diarization.py  test_orchestrator.py  test_pipeline.py  test_whisper.py
utils/: __init__.py
